--- a/package.json
+++ b/package.json
@@ -54,9 +54,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/plugin-syntax-jsx": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@webpack-cli/generators": "^2.4.2",
     "autoprefixer": "^10.4.2",
-    "css-loader": "^6.6.0",
+    "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "postcss": "^8.4.8",
