--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,17 +7,17 @@ phases:
     
     pre_build:  
       commands:
-        - echo install packages...      
         - npm install
     build:
       commands:
-        - echo Create build...     
         - npm run build
     post_build:
     commands:
-      - echo Removing unnecessary files...
       - rm -rf node_modules/
 artifacts:
-  base-directory: '.'
   files:
-    - '**/*'
+    - public/**/*
+    - src/**/*
+    - package.json
+    - appspec.yml
+    - scripts/**/*
