--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,10 @@ phases:
     runtime-versions:
       nodejs: 12
     commands:
-      - npm install
+      - npm install && npm install serve
   build:
     commands:
       - npm run build
   post_build:
     commands:
-      - aws s3 cp build s3://bucket-frontend-t1-g3 --recursive --acl public-read
+      - serve -s build
