--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,4 @@ phases:
       - npm run build
   post_build:
     commands:
-      - aws s3 cp build s3://bucket-frontend-t1-g3 --recursive --acl public-
+      - aws s3 cp build s3://bucket-frontend-t1-g3 --recursive --acl public-read
